--- a/my-app/src/components/button/style.scss
+++ b/my-app/src/components/button/style.scss
@@ -1,6 +1,13 @@
 .button {
-	padding: 10px;
-	border-radius: 5px;
-	background-color: antiquewhite;
+	margin-top: 10px;
+	padding: 8px 16px;
+	border: none;
+	border-radius: 4px;
+	background-color: #007bff;
+	color: #fff;
 	cursor: pointer;
+}
+
+button:hover {
+	background-color: #0056b3;
 }
