--- a/my-app/src/components/buttonWithLabel/style.scss
+++ b/my-app/src/components/buttonWithLabel/style.scss
@@ -1,7 +1,11 @@
 .button-with-label {
-	display: flex;
-	flex-direction: column;
-	gap: 5px;
-	justify-content: center;
-	align-items: center;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  justify-content: center;
+  align-items: center;
+
+  p {
+    margin-right: 5px;
+  }
 }
